--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -20,7 +20,7 @@
         font-size: 2em;
       }
       body{
-        background-color: #363636;
+        background-color: #8B7765;
       }
       div{
         width: 60%;
