--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -5,7 +5,7 @@
     <style>
       table, th, td{
         text-align: center;
-        border: 2px solid black;
+        border: 1px solid #363636;
         border-collapse: collapse;
         margin: 0 auto;
         padding: 10px 15px;
